Further editing to use Q instead of I

--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,15 +17,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "May need to pip install each module before importing"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,11 +226,9 @@
     "\n",
     "        # Mueller Matrix of analyzer (one channel of the Wollaston prism is treated as a linear polarizer. The right spot is horizontal (0) and the left spot is vertical(pi/2))\n",
     "        # This analyzer needs to be changed to account for the two channels\n",
-    "        Ma = (linear_polarizer(0)-linear_polarizer(np.pi/2)) @ linear_retarder(th[i]*5, np.pi/2)\n",
-    "        #Ma_plus = linear_polarizer(0) @ linear_retarder(th[i]*5, np.pi/2)\n",
-    "        # Write out the whole equation for the plus version, minus the whole equation for the minus version. This gives Q, which we then divide by I_total\n",
+    "        #Ma = (linear_polarizer(0)-linear_polarizer(np.pi/2)) @ linear_retarder(th[i]*5, np.pi/2)\n",
+    "        Ma = linear_retarder(th[i]*5, np.pi/2)  # take out the wollaston prism part, because we are essentially measuring Q directly after the quarter wave plate\n",
     "\n",
-    "        # Data reduction matrix. Taking the 1 index to find Q?\n",
     "        # Ma and Mg are both 4x4 matrices, so the output is a 16x1 vector\n",
     "        Wmat[i,:] = np.kron((Ma)[1,:], Mg[:,0])    # Try subtracting before taking the kron\n",
     "        #Wmat[i,:] = np.kron(Ma_plus[1,:], Mg[:,1]) - np.kron(Ma_minus[1,:], Mg[:,1])\n",
@@ -261,25 +252,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\\\\\Users\\\\\\\\EPL User\\\\\\\\Desktop\\\\\\\\L_Plate_Characterization\\\\\\\\Calibration\\\\\\\\Calibration_Reduced\\\\\\\\Cal_1600_Reduced\\\\\\\\'",
+     "evalue": "[Errno 2] No such file or directory: 'C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m maxradius \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      6\u001b[0m cutoff \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5000\u001b[39m\n\u001b[0;32m----> 8\u001b[0m extracted_data \u001b[38;5;241m=\u001b[39m \u001b[43mextract_intensities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxradius\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m Cal_Il_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     10\u001b[0m Cal_Ir_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m1\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[10], line 8\u001b[0m, in \u001b[0;36mextract_intensities\u001b[0;34m(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\u001b[0m\n\u001b[1;32m      5\u001b[0m bad_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([])\n\u001b[1;32m      6\u001b[0m longtheta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi, \u001b[38;5;241m46\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m)\u001b[49m, key \u001b[38;5;241m=\u001b[39m extract_number):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mstartswith(reduced_filename):\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m fits\u001b[38;5;241m.\u001b[39mopen(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(reduced_folder, filename)) \u001b[38;5;28;01mas\u001b[39;00m hdul:\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\\\\\Users\\\\\\\\EPL User\\\\\\\\Desktop\\\\\\\\L_Plate_Characterization\\\\\\\\Calibration\\\\\\\\Calibration_Reduced\\\\\\\\Cal_1600_Reduced\\\\\\\\'"
+      "Cell \u001b[0;32mIn[19], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m maxradius \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      7\u001b[0m cutoff \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5000\u001b[39m\n\u001b[0;32m----> 9\u001b[0m extracted_data \u001b[38;5;241m=\u001b[39m \u001b[43mextract_intensities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxradius\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m Cal_Il_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     11\u001b[0m Cal_Ir_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m1\u001b[39m]\n",
+      "Cell \u001b[0;32mIn[8], line 8\u001b[0m, in \u001b[0;36mextract_intensities\u001b[0;34m(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\u001b[0m\n\u001b[1;32m      5\u001b[0m bad_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([])\n\u001b[1;32m      6\u001b[0m longtheta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi, \u001b[38;5;241m46\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m)\u001b[49m, key \u001b[38;5;241m=\u001b[39m extract_number):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mstartswith(reduced_filename):\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m fits\u001b[38;5;241m.\u001b[39mopen(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(reduced_folder, filename)) \u001b[38;5;28;01mas\u001b[39;00m hdul:\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/'"
      ]
     }
    ],
    "source": [
     "reduced_filename = 'Reduced_DRRP_'\n",
-    "reduced_folder = r\"C:\\\\Users\\\\EPL User\\\\Desktop\\\\L_Plate_Characterization\\\\Calibration\\\\Calibration_Reduced\\\\Cal_1600_Reduced\\\\\"\n",
+    "#reduced_folder = r\"C:\\\\Users\\\\EPL User\\\\Desktop\\\\L_Plate_Characterization\\\\Calibration\\\\Calibration_Reduced\\\\Cal_1600_Reduced\\\\\"\n",
+    "reduced_folder = r\"C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/\"\n",
     "lcenter = [258, 255]\n",
     "rcenter = [258, 332]\n",
     "maxradius = 10\n",
@@ -325,28 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-4.51665893e-02  1.00000000e+00 -5.13555017e-02 -1.66218189e-03]\n",
-      " [-4.77300947e-18 -4.56668529e-18 -9.70678924e-19  9.92364469e-19]\n",
-      " [-1.66979017e-16  2.06356100e-17 -2.44660517e-18  8.30840844e-19]\n",
-      " [ 4.99877696e-17  1.59934741e-17  2.03199277e-18 -1.77773613e-18]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "M3 = modified_full_mueller_polarimetry(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)\n",
-    "print(M3/np.max(M3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +336,7 @@
        "array([4, 4, 6, 8, 4, 4, 6, 8, 4, 4, 6, 8, 4, 4, 6, 8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,27 +345,6 @@
     "M_ex = np.array([[2, 1, 1, 4], [2, 2, 2, 2], [3, 3, 3, 3], [4, 4, 4, 4]])\n",
     "print(M_ex)\n",
     "np.kron(M_ex[1,:], M_ex[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 1. 1. 1.]\n",
-      " [2. 2. 2. 2.]\n",
-      " [3. 3. 3. 3.]\n",
-      " [4. 4. 4. 4.]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "M4 = original_full_mueller_polarimetry(Cal_theta1600, LPA_angle=np.pi/2, M_in=M_ex)\n",
-    "print(M4)"
    ]
   },
   {
@@ -421,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,17 +382,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.00000000e+00  1.00000000e+00  1.00000000e+00  4.00000000e+00]\n",
-      " [-1.35809992e-16  6.57717963e-32 -1.39974351e-31 -4.96704858e-31]\n",
-      " [-4.32110736e-16  1.67061051e-17  3.06161700e-17  1.22464680e-16]\n",
-      " [ 3.90663751e-17  3.64604030e-17 -2.21685445e-31  3.31025513e-31]]\n"
+      "[[ 0.00000000e+00 -9.41602747e-16 -8.64861082e-16 -2.08098438e-15]\n",
+      " [ 2.00000000e+00  2.00000000e+00  2.00000000e+00  2.00000000e+00]\n",
+      " [ 3.00000000e+00  3.00000000e+00  3.00000000e+00  3.00000000e+00]\n",
+      " [ 4.00000000e+00  4.00000000e+00  4.00000000e+00  4.00000000e+00]]\n"
      ]
     }
    ],
@@ -451,6 +401,58 @@
     "# Works for the top row but not the others\n",
     "M6 = modified_full_mueller_polarimetry(theta_ex, Cal_Il_1600_ex, Cal_Ir_1600_ex, M_in=M_ex)\n",
     "print(M6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5 0.5 0.  0. ]\n",
+      " [0.5 0.5 0.  0. ]\n",
+      " [0.  0.  0.  0. ]\n",
+      " [0.  0.  0.  0. ]]\n",
+      "[[ 5.00000000e-01 -5.00000000e-01  6.12323400e-17  0.00000000e+00]\n",
+      " [-5.00000000e-01  5.00000000e-01 -6.12323400e-17  0.00000000e+00]\n",
+      " [ 6.12323400e-17 -6.12323400e-17  7.49879891e-33  0.00000000e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(linear_polarizer(0))\n",
+    "print(linear_polarizer(np.pi/2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00,  0.00000000e+00,  6.12323400e-17,\n",
+       "         0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  1.00000000e+00, -6.12323400e-17,\n",
+       "         0.00000000e+00],\n",
+       "       [ 6.12323400e-17, -6.12323400e-17,  7.49879891e-33,\n",
+       "         0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "linear_polarizer(0) + linear_polarizer(np.pi/2)"
    ]
   },
   {
