--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,12 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modified function to compute the Mueller matrix of a sample based on DRRP intensity measurements\n",
-    "# Needs both channel data at the same time, an additional input\n",
+    "# Needs both channel data at the same time to measure Q\n",
     "def modified_full_mueller_polarimetry(thetas, I_minus_det, I_plus_det, return_condition_number=False, M_in=None):\n",
     "    nmeas = len(thetas)  # Number of measurements\n",
     "    Wmat = np.zeros([nmeas, 16])\n",
@@ -225,17 +225,16 @@
     "        Mg = linear_retarder(th[i], np.pi/2) @ linear_polarizer(0)\n",
     "\n",
     "        # Mueller Matrix of analyzer (one channel of the Wollaston prism is treated as a linear polarizer. The right spot is horizontal (0) and the left spot is vertical(pi/2))\n",
-    "        # This analyzer needs to be changed to account for the two channels\n",
     "        #Ma = (linear_polarizer(0)-linear_polarizer(np.pi/2)) @ linear_retarder(th[i]*5, np.pi/2)\n",
     "        Ma = linear_retarder(th[i]*5, np.pi/2)  # take out the wollaston prism part, because we are essentially measuring Q directly after the quarter wave plate\n",
     "\n",
     "        # Ma and Mg are both 4x4 matrices, so the output is a 16x1 vector\n",
-    "        Wmat[i,:] = np.kron((Ma)[1,:], Mg[:,0])    # Try subtracting before taking the kron\n",
+    "        Wmat[i,:] = np.kron((Ma)[1,:], Mg[:,0])\n",
     "        #Wmat[i,:] = np.kron(Ma_plus[1,:], Mg[:,1]) - np.kron(Ma_minus[1,:], Mg[:,1])\n",
     "\n",
     "        # M_in is some example Mueller matrix. Providing this input will test theoretical Mueller matrix. Otherwise, the raw data is used\n",
     "        if M_in is not None:\n",
-    "            Pmat[i] = (((Ma[1,:]) @ M_in @ Mg[:,0]))*1   # *Q[i]/I_total[i]\n",
+    "            Pmat[i] = (((Ma[1,:]) @ M_in @ Mg[:,0]))\n",
     "            #Pmat[i] = ((Ma_plus[1,:] @ M_in @ Mg[:,1]) - (Ma_minus[1,:] @ M_in @ Mg[:,1]))*1\n",
     "        else:\n",
     "            Pmat[i] = Q[i]/I_total[i]  #Pmat is essentially what we are measuring, the normailzed Q\n",
@@ -317,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2 1 1 4]\n",
+      "[[1 2 3 4]\n",
       " [2 2 2 2]\n",
       " [3 3 3 3]\n",
       " [4 4 4 4]]\n"
@@ -333,45 +332,23 @@
     {
      "data": {
       "text/plain": [
-       "array([4, 4, 6, 8, 4, 4, 6, 8, 4, 4, 6, 8, 4, 4, 6, 8])"
+       "array([2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "M_ex = np.array([[2, 1, 1, 4], [2, 2, 2, 2], [3, 3, 3, 3], [4, 4, 4, 4]])\n",
+    "M_ex = np.array([[1, 2, 3, 4], [2, 2, 2, 2], [3, 3, 3, 3], [4, 4, 4, 4]])\n",
     "print(M_ex)\n",
     "np.kron(M_ex[1,:], M_ex[:,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.00000000e+00 -1.68093066e-16  1.19801456e-15 -9.44366894e-16]\n",
-      " [ 2.00000000e+00  2.00000000e+00  2.00000000e+00  2.00000000e+00]\n",
-      " [ 3.00000000e+00  3.00000000e+00  3.00000000e+00  3.00000000e+00]\n",
-      " [ 4.00000000e+00  4.00000000e+00  4.00000000e+00  4.00000000e+00]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Version with (M+) - (M-)\n",
-    "M5 = modified_full_mueller_polarimetry(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600, M_in=M_ex)\n",
-    "print(M5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -401,58 +378,6 @@
     "# Works for the top row but not the others\n",
     "M6 = modified_full_mueller_polarimetry(theta_ex, Cal_Il_1600_ex, Cal_Ir_1600_ex, M_in=M_ex)\n",
     "print(M6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.5 0.5 0.  0. ]\n",
-      " [0.5 0.5 0.  0. ]\n",
-      " [0.  0.  0.  0. ]\n",
-      " [0.  0.  0.  0. ]]\n",
-      "[[ 5.00000000e-01 -5.00000000e-01  6.12323400e-17  0.00000000e+00]\n",
-      " [-5.00000000e-01  5.00000000e-01 -6.12323400e-17  0.00000000e+00]\n",
-      " [ 6.12323400e-17 -6.12323400e-17  7.49879891e-33  0.00000000e+00]\n",
-      " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(linear_polarizer(0))\n",
-    "print(linear_polarizer(np.pi/2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.00000000e+00,  0.00000000e+00,  6.12323400e-17,\n",
-       "         0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  1.00000000e+00, -6.12323400e-17,\n",
-       "         0.00000000e+00],\n",
-       "       [ 6.12323400e-17, -6.12323400e-17,  7.49879891e-33,\n",
-       "         0.00000000e+00],\n",
-       "       [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n",
-       "         0.00000000e+00]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "linear_polarizer(0) + linear_polarizer(np.pi/2)"
    ]
   },
   {
