Updated code to reconstruct full Mueller matrix

--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import New_DRRP_Functions as DRRP\n",
+    "from New_DRRP_Functions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,19 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modified function to compute the Mueller matrix of a sample based on DRRP intensity measurements\n",
     "# Needs both channel data at the same time to measure Q\n",
-    "def modified_full_mueller_polarimetry(thetas, I_minus_det, I_plus_det, return_condition_number=False, M_in=None):\n",
+    "def modified_full_mueller_polarimetry(thetas, I_minus, I_plus, return_condition_number=False, M_in=None):\n",
     "    nmeas = len(thetas)  # Number of measurements\n",
     "    Wmat = np.zeros([nmeas, 16])\n",
     "    Pmat = np.zeros([nmeas])\n",
     "    th = thetas\n",
-    "    Q = I_plus_det - I_minus_det   # Difference in intensities measured by the detector. Plus should be the right spot, minus the left spot\n",
-    "    I_total = I_plus_det + I_minus_det\n",
+    "    Q = I_plus - I_minus   # Difference in intensities measured by the detector. Plus should be the right spot, minus the left spot\n",
+    "    I_total = I_plus + I_minus\n",
     "\n",
     "    for i in range(nmeas):\n",
     "        # Mueller Matrix of generator (linear polarizer and a quarter wave plate)\n",
@@ -234,10 +244,10 @@
     "\n",
     "        # M_in is some example Mueller matrix. Providing this input will test theoretical Mueller matrix. Otherwise, the raw data is used\n",
     "        if M_in is not None:\n",
-    "            Pmat[i] = (((Ma[1,:]) @ M_in @ Mg[:,0]))\n",
+    "            Pmat[i] = (Ma[1,:] @ M_in @ Mg[:,0])\n",
     "            #Pmat[i] = ((Ma_plus[1,:] @ M_in @ Mg[:,1]) - (Ma_minus[1,:] @ M_in @ Mg[:,1]))*1\n",
     "        else:\n",
-    "            Pmat[i] = Q[i]/I_total[i]  #Pmat is essentially what we are measuring, the normailzed Q\n",
+    "            Pmat[i] = Q[i]  #Pmat is essentially what we are measuring, the normailzed Q. Maybe Q[i]/I_total[i]\n",
     "\n",
     "    # Compute Mueller matrix using Moore-Penrose pseudo invervse\n",
     "    M = np.linalg.pinv(Wmat) @ Pmat\n",
@@ -251,26 +261,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try to make a version using total intensity that just gives the top row of the Mueller matrix\n",
+    "def top_modified_full_mueller_polarimetry(thetas, I_minus, I_plus, return_condition_number=False, M_in=None):\n",
+    "    nmeas = len(thetas)  # Number of measurements\n",
+    "    Wmat = np.zeros([nmeas, 16])\n",
+    "    Pmat = np.zeros([nmeas])\n",
+    "    th = thetas\n",
+    "    Q = I_plus - I_minus   # Difference in intensities measured by the detector. Plus should be the right spot, minus the left spot\n",
+    "    I_total = I_plus + I_minus\n",
+    "\n",
+    "    for i in range(nmeas):\n",
+    "        # Mueller Matrix of generator (linear polarizer and a quarter wave plate)\n",
+    "        Mg = linear_retarder(th[i], np.pi/2) @ linear_polarizer(0)\n",
+    "\n",
+    "        # Mueller Matrix of analyzer (one channel of the Wollaston prism is treated as a linear polarizer. The right spot is horizontal (0) and the left spot is vertical(pi/2))\n",
+    "        #Ma = (linear_polarizer(0)-linear_polarizer(np.pi/2)) @ linear_retarder(th[i]*5, np.pi/2)\n",
+    "        Ma = linear_retarder(th[i]*5, np.pi/2)  # take out the wollaston prism part, because we are essentially measuring Q directly after the quarter wave plate\n",
+    "\n",
+    "        # Ma and Mg are both 4x4 matrices, so the output is a 16x1 vector\n",
+    "        Wmat[i,:] = np.kron((Ma)[0,:], Mg[:,0])\n",
+    "        #Wmat[i,:] = np.kron(Ma_plus[1,:], Mg[:,1]) - np.kron(Ma_minus[1,:], Mg[:,1])\n",
+    "\n",
+    "        # M_in is some example Mueller matrix. Providing this input will test theoretical Mueller matrix. Otherwise, the raw data is used\n",
+    "        if M_in is not None:\n",
+    "            Pmat[i] = (Ma[0,:] @ M_in @ Mg[:,0])\n",
+    "            #Pmat[i] = ((Ma_plus[1,:] @ M_in @ Mg[:,1]) - (Ma_minus[1,:] @ M_in @ Mg[:,1]))*1\n",
+    "        else:\n",
+    "            Pmat[i] = I_total[i]  #Pmat is essentially what we are measuring, the normailzed Q\n",
+    "\n",
+    "    # Compute Mueller matrix using Moore-Penrose pseudo invervse\n",
+    "    M = np.linalg.pinv(Wmat) @ Pmat\n",
+    "    M = np.reshape(M,[4,4])\n",
+    "\n",
+    "    if return_condition_number == True:\n",
+    "        return M, condition_number(Wmat)\n",
+    "    else:\n",
+    "        return M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Returns the sum of two matrices, one calculated using I to get the top row, and the other using Q to get the bottom 3 rows\n",
+    "def combined_full_mueller_polarimetry(thetas, I_minus, I_plus, M_in=None):\n",
+    "    nmeas = len(thetas)  # Number of measurements\n",
+    "    Wmat1 = np.zeros([nmeas, 16])\n",
+    "    Pmat1 = np.zeros([nmeas])\n",
+    "    Wmat2 = np.zeros([nmeas, 16])\n",
+    "    Pmat2 = np.zeros([nmeas])\n",
+    "    th = thetas\n",
+    "    Q = I_plus - I_minus   # Difference in intensities measured by the detector. Plus should be the right spot, minus the left spot\n",
+    "    I_total = I_plus + I_minus\n",
+    "\n",
+    "    for i in range(nmeas):\n",
+    "        Mg = linear_retarder(th[i], np.pi/2) @ linear_polarizer(0) # Mueller matrix of generator (linear polarizer and quarter wave plate)\n",
+    "\n",
+    "        # The right spot is horizontal (angle=0, I plus) and the left spot is vertical (angle=pi/2, I minus)\n",
+    "        Ma = linear_retarder(th[i]*5, np.pi/2)  # Mueller matrix of analyzer (quarter wave plate)\n",
+    "\n",
+    "        # Ma and Mg are both 4x4 matrices, so the output is a 16x1 vector\n",
+    "        Wmat1[i,:] = np.kron((Ma)[0,:], Mg[:,0]) # for the top row, using intensities\n",
+    "        Wmat2[i,:] = np.kron((Ma)[1,:], Mg[:,0]) # for the bottom 3 rows, using Q\n",
+    "\n",
+    "        # M_in is some example Mueller matrix. Providing this input will test theoretical Mueller matrix. Otherwise, the raw data is used\n",
+    "        if M_in is not None:\n",
+    "            Pmat1[i] = (Ma[0,:] @ M_in @ Mg[:,0])\n",
+    "            Pmat2[i] = (Ma[1,:] @ M_in @ Mg[:,0])\n",
+    "        else:\n",
+    "            Pmat1[i] = I_total[i]  #Pmat is a vector of measurements (either I or Q)\n",
+    "            Pmat2[i] = Q[i]/I_total[i]\n",
+    "\n",
+    "    # Compute Mueller matrix using Moore-Penrose pseudo invervse\n",
+    "    M1 = np.linalg.pinv(Wmat1) @ Pmat1\n",
+    "    M1 = np.reshape(M1, [4,4])\n",
+    "\n",
+    "    M2 = np.linalg.pinv(Wmat2) @ Pmat2\n",
+    "    M2 = np.reshape(M2, [4,4])\n",
+    "\n",
+    "    return M1 + M2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the difference between defining filepath in Windows (top) vs Linux (bottom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 9\u001b[0m\n\u001b[1;32m      6\u001b[0m maxradius \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m\n\u001b[1;32m      7\u001b[0m cutoff \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5000\u001b[39m\n\u001b[0;32m----> 9\u001b[0m extracted_data \u001b[38;5;241m=\u001b[39m \u001b[43mextract_intensities\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrcenter\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmaxradius\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m Cal_Il_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     11\u001b[0m Cal_Ir_1600 \u001b[38;5;241m=\u001b[39m extracted_data[\u001b[38;5;241m1\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[8], line 8\u001b[0m, in \u001b[0;36mextract_intensities\u001b[0;34m(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\u001b[0m\n\u001b[1;32m      5\u001b[0m bad_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([])\n\u001b[1;32m      6\u001b[0m longtheta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, np\u001b[38;5;241m.\u001b[39mpi, \u001b[38;5;241m46\u001b[39m)\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m filename \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduced_folder\u001b[49m\u001b[43m)\u001b[49m, key \u001b[38;5;241m=\u001b[39m extract_number):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mstartswith(reduced_filename):\n\u001b[1;32m     10\u001b[0m         \u001b[38;5;28;01mwith\u001b[39;00m fits\u001b[38;5;241m.\u001b[39mopen(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(reduced_folder, filename)) \u001b[38;5;28;01mas\u001b[39;00m hdul:\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1600nm_550_1.8_95.99994140624999.fits, index: 24\n"
      ]
     }
    ],
    "source": [
     "reduced_filename = 'Reduced_DRRP_'\n",
     "#reduced_folder = r\"C:\\\\Users\\\\EPL User\\\\Desktop\\\\L_Plate_Characterization\\\\Calibration\\\\Calibration_Reduced\\\\Cal_1600_Reduced\\\\\"\n",
-    "reduced_folder = r\"C:/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/\"\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1600_Reduced/\"\n",
     "lcenter = [258, 255]\n",
     "rcenter = [258, 332]\n",
     "maxradius = 10\n",
@@ -284,39 +385,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.05152693  0.20517248  0.00178048]\n",
-      " [-0.01048165  0.92522473 -0.48160509  0.00187048]\n",
-      " [-0.03737062  0.4777589   0.91871019  0.00526699]\n",
-      " [ 0.0040122  -0.00341311 -0.00120618  0.98459564]]\n",
-      "[[ 1.00000000e+00 -5.00787093e-02 -1.96260741e-01  1.77788613e-04]\n",
-      " [-5.58379564e-03  9.06623893e-01 -4.55664149e-01  1.16617389e-03]\n",
-      " [-3.88739259e-02  4.59614971e-01  8.82645393e-01 -2.14018921e-03]\n",
-      " [-7.49722616e-04  1.34843279e-03 -2.76461362e-03  9.61475066e-01]]\n",
-      "[[ 1.00000000e+00  7.24109547e-04  4.45587073e-03  9.79136256e-04]\n",
-      " [-8.03272167e-03  9.15924310e-01 -4.68634622e-01  1.51832603e-03]\n",
-      " [-3.81222723e-02  4.68686938e-01  9.00677793e-01  1.56339858e-03]\n",
-      " [ 1.63123725e-03 -1.03234004e-03 -1.98539673e-03  9.73035354e-01]]\n"
+      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
+      " [ 0.10613346  0.04349188  0.05219578 -0.08153752]\n",
+      " [ 0.30800836  0.12621714  0.15147662 -0.23662886]\n",
+      " [-0.94544515 -0.38742903 -0.46496413  0.72634265]]\n",
+      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
+      " [-0.10613346 -0.04349188 -0.05219578  0.08153752]\n",
+      " [-0.30800836 -0.12621714 -0.15147662  0.23662886]\n",
+      " [ 0.94544515  0.38742903  0.46496413 -0.72634265]]\n",
+      "0.75781052669314\n"
      ]
     }
    ],
    "source": [
     "M1 = original_full_mueller_polarimetry(Cal_theta1600, Cal_Ir_1600, 0)\n",
-    "print(M1/np.max(M1))\n",
+    "M1 = M1/np.max(M1)\n",
+    "print(M1)\n",
     "M2 = original_full_mueller_polarimetry(Cal_theta1600, Cal_Il_1600, np.pi/2)\n",
-    "print(M2/np.max(M2))\n",
-    "print((M2/np.max(M2) + M1/np.max(M1))/2)"
+    "M2 = M2/np.max(M2)\n",
+    "print(M2)\n",
+    "print(np.arccos(M1[3,3]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +435,7 @@
        "array([2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -382,10 +482,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 2. 3. 4.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M7 = top_modified_full_mueller_polarimetry(theta_ex, Cal_Il_1600_ex, Cal_Ir_1600_ex, M_in=M_ex)\n",
+    "print(M7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 2. 3. 4.]\n",
+      " [2. 2. 2. 2.]\n",
+      " [3. 3. 3. 3.]\n",
+      " [4. 4. 4. 4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M8 = combined_full_mueller_polarimetry(theta_ex, Cal_Il_1600_ex, Cal_Ir_1600_ex, M_in=M_ex)\n",
+    "print(M8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.00000000e+00 -1.03930057e-01 -1.50381487e-03  3.61748614e-03]\n",
+      " [ 2.49645706e-05 -1.06745572e-05  6.61187371e-06  2.20546208e-05]\n",
+      " [ 4.69009960e-05 -5.68157019e-05 -6.36413120e-05  6.40183972e-06]\n",
+      " [ 1.39403879e-05 -2.40207979e-05  3.31618136e-06  4.34893319e-06]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M9 = combined_full_mueller_polarimetry(Cal_Il_1600, Cal_Il_1600, Cal_Ir_1600)\n",
+    "M9 = M9/np.max(M9)\n",
+    "print(M9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
+      " [-0.10613346 -0.04349188 -0.05219578  0.08153752]\n",
+      " [-0.30800836 -0.12621714 -0.15147662  0.23662886]\n",
+      " [ 0.94544515  0.38742903  0.46496413 -0.72634265]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(M2)"
+   ]
   }
  ],
  "metadata": {
