Fixed normalization issue

--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
     "            Pmat2[i] = (Ma[1,:] @ M_in @ Mg[:,0])\n",
     "        else:\n",
     "            Pmat1[i] = I_total[i]  #Pmat is a vector of measurements (either I or Q)\n",
-    "            Pmat2[i] = Q[i]/I_total[i]\n",
+    "            Pmat2[i] = Q[i] # Divide by I?\n",
     "\n",
     "    # Compute Mueller matrix using Moore-Penrose pseudo invervse\n",
     "    M1 = np.linalg.pinv(Wmat1) @ Pmat1\n",
@@ -345,7 +345,11 @@
     "    M2 = np.linalg.pinv(Wmat2) @ Pmat2\n",
     "    M2 = np.reshape(M2, [4,4])\n",
     "\n",
-    "    return M1 + M2"
+    "    M = np.zeros([4,4])\n",
+    "    M[0,:] = M1[0,:]\n",
+    "    M[1:4,:] = M2[1:4,:]\n",
+    "\n",
+    "    return M"
    ]
   },
   {
@@ -385,22 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
-      " [ 0.10613346  0.04349188  0.05219578 -0.08153752]\n",
-      " [ 0.30800836  0.12621714  0.15147662 -0.23662886]\n",
-      " [-0.94544515 -0.38742903 -0.46496413  0.72634265]]\n",
-      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
-      " [-0.10613346 -0.04349188 -0.05219578  0.08153752]\n",
-      " [-0.30800836 -0.12621714 -0.15147662  0.23662886]\n",
-      " [ 0.94544515  0.38742903  0.46496413 -0.72634265]]\n",
-      "0.75781052669314\n"
+      "[[ 1.          0.05152693  0.20517248  0.00178048]\n",
+      " [-0.01048165  0.92522473 -0.48160509  0.00187048]\n",
+      " [-0.03737062  0.4777589   0.91871019  0.00526699]\n",
+      " [ 0.0040122  -0.00341311 -0.00120618  0.98459564]]\n",
+      "[[ 1.00000000e+00 -5.00787093e-02 -1.96260741e-01  1.77788613e-04]\n",
+      " [-5.58379564e-03  9.06623893e-01 -4.55664149e-01  1.16617389e-03]\n",
+      " [-3.88739259e-02  4.59614971e-01  8.82645393e-01 -2.14018921e-03]\n",
+      " [-7.49722616e-04  1.34843279e-03 -2.76461362e-03  9.61475066e-01]]\n",
+      "0.1757502176527439\n"
      ]
     }
    ],
@@ -416,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +439,7 @@
        "array([2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8, 2, 4, 6, 8])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -524,45 +528,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.00000000e+00 -1.03930057e-01 -1.50381487e-03  3.61748614e-03]\n",
-      " [ 2.49645706e-05 -1.06745572e-05  6.61187371e-06  2.20546208e-05]\n",
-      " [ 4.69009960e-05 -5.68157019e-05 -6.36413120e-05  6.40183972e-06]\n",
-      " [ 1.39403879e-05 -2.40207979e-05  3.31618136e-06  4.34893319e-06]]\n"
+      "[[ 1.00000000e+00 -5.00787093e-02 -1.96260741e-01  1.77788613e-04]\n",
+      " [-5.58379564e-03  9.06623893e-01 -4.55664149e-01  1.16617389e-03]\n",
+      " [-3.88739259e-02  4.59614971e-01  8.82645393e-01 -2.14018921e-03]\n",
+      " [-7.49722616e-04  1.34843279e-03 -2.76461362e-03  9.61475066e-01]]\n"
      ]
     }
    ],
    "source": [
-    "M9 = combined_full_mueller_polarimetry(Cal_Il_1600, Cal_Il_1600, Cal_Ir_1600)\n",
+    "print(combined_full_mueller_polarimetry(theta_ex, Cal_Il_1600_ex, Cal_Ir_1600_ex, M_in=M2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.          0.00148209 -0.0019202   0.00117834]\n",
+      " [-0.01612105  0.97855426 -0.20289116  0.00301233]\n",
+      " [-0.03368077  0.44931743  0.89274259  0.0037962 ]\n",
+      " [ 0.00386122 -0.01093588 -0.00640964  0.97519054]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "M9 = combined_full_mueller_polarimetry(Cal_theta1600, Cal_Il_1600, Cal_Ir_1600)\n",
     "M9 = M9/np.max(M9)\n",
     "print(M9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.          0.40978478  0.49179387 -0.76825466]\n",
-      " [-0.10613346 -0.04349188 -0.05219578  0.08153752]\n",
-      " [-0.30800836 -0.12621714 -0.15147662  0.23662886]\n",
-      " [ 0.94544515  0.38742903  0.46496413 -0.72634265]]\n"
+      "[[ 0.          0.0515608   0.19434054  0.00100056]\n",
+      " [-0.01053725  0.07193037  0.25277298  0.00184616]\n",
+      " [ 0.00519315 -0.01029754  0.01009719  0.00593639]\n",
+      " [ 0.00461094 -0.01228432 -0.00364503  0.01371548]]\n"
      ]
     }
    ],
    "source": [
-    "print(M2)"
+    "print(M9-M2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
