--- a/New_Calibration_Testing.ipynb
+++ b/New_Calibration_Testing.ipynb
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -960,10 +960,11 @@
        " array([[ 0.92764119, -0.00441586,  0.01990613,  0.00593506],\n",
        "        [-0.08971429,  0.96128742, -0.00371296, -0.00812729],\n",
        "        [ 0.03908392, -0.0539217 ,  1.        , -0.00815459],\n",
-       "        [-0.00239254,  0.01875966, -0.01918307,  0.89030943]]))"
+       "        [-0.00239254,  0.01875966, -0.01918307,  0.89030943]]),\n",
+       " 0.008760653697284224)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -994,6 +995,7 @@
    "source": [
     "data_1550 = q_ultimate_polarimetry(Cal_theta1550, Cal_Il_1550, Cal_Ir_1550, theta1550, Il_1550, Ir_1550)\n",
     "MCal_1550 = data_1550[2]\n",
+    "MSample_1550 = data_1550[0]\n",
     "print(MCal_1550)"
    ]
   },
@@ -1208,22 +1210,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.12013862538752362\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_1550[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.92764119 -0.00441586  0.01990613  0.00593506]\n",
+      " [-0.08971429  0.96128742 -0.00371296 -0.00812729]\n",
+      " [ 0.03908392 -0.0539217   1.         -0.00815459]\n",
+      " [-0.00239254  0.01875966 -0.01918307  0.89030943]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(MCal_1550)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10969057355489853\n",
+      "0.028294472844836924 0.02369493944296544\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1-MCal_1550[3,3])\n",
+    "lower_retardance = np.arccos(MSample_1550[3, 3] + (1-MCal_1550[3,3]))/(2*np.pi)\n",
+    "upper_retardance = np.arccos(MSample_1550[3, 3] - (1-MCal_1550[3,3]))/(2*np.pi)\n",
+    "lower_retardance_error = data_1550[1] - lower_retardance\n",
+    "upper_retardance_error = upper_retardance - data_1550[1]\n",
+    "print(lower_retardance_error, upper_retardance_error)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Error in the extracted retardance should be dependent on the RMS error of the calibration matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11808961133074575 0.12215997113443675\n"
+     ]
+    }
+   ],
+   "source": [
+    "lower_retardance = np.arccos(MSample_1550[3, 3] + RMS_calculator(MCal_1550))/(2*np.pi)\n",
+    "upper_retardance = np.arccos(MSample_1550[3, 3] - RMS_calculator(MCal_1550))/(2*np.pi)\n",
+    "print(lower_retardance, upper_retardance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0020213457469131224 0.0375553339236601\n"
+     ]
+    }
+   ],
+   "source": [
+    "upper_retardance_error = upper_retardance - data_1550[1]\n",
+    "lower_retardance_error = data_1550[1] - lower_retardance\n",
+    "print(upper_retardance_error, lower_retardance_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retardance_error(M_sample, retardance, M_cal):\n",
+    "# Use the difference between the identity matrix and the retardance input of the calibration matrix. Might use RMS of whole M_cal instead later\n",
+    "    lower_retardance = np.arccos(M_sample[3, 3] + (1 - M_cal[3, 3]))/(2*np.pi)\n",
+    "    upper_retardance = np.arccos(M_sample[3, 3] - (1 - M_cal[3, 3]))/(2*np.pi)\n",
+    "\n",
+    "    lower_retardance_error = retardance - lower_retardance\n",
+    "    #print(retardance, lower_retardance)\n",
+    "    upper_retardance_error = upper_retardance - retardance\n",
+    "    retardance_error = [lower_retardance_error, upper_retardance_error]\n",
+    "    return retardance_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_39.9999755859375.fits, index: 10\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_51.99996826171875.fits, index: 13\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_59.999963378906244.fits, index: 15\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_95.99994140624999.fits, index: 24\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_151.9999072265625.fits, index: 38\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduced_filename = 'Reduced_DRRP_'\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Calibration/Calibration_Reduced/Cal_1400_Reduced/\"\n",
+    "lcenter = [258, 255]\n",
+    "rcenter = [258, 332]\n",
+    "maxradius = 10\n",
+    "cutoff = 5000\n",
+    "\n",
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "Cal_Il_1400 = extracted_data[0]\n",
+    "Cal_Ir_1400 = extracted_data[1]\n",
+    "Cal_theta1400 = extracted_data[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_35.99997802734375.fits, index: 9\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_43.999973144531246.fits, index: 11\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_67.99995849609374.fits, index: 17\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_91.99994384765624.fits, index: 23\n",
+      "Warning: low flux detected, check the image Reduced_DRRP_L_1400nm_550_1.8_171.99989501953124.fits, index: 43\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduced_filename = 'Reduced_DRRP_'\n",
+    "reduced_folder = \"/home/shared/exoserver/Lab_Data/Mueller_Matrix_Polarimeter/L_Plate_Characterization/Reduced_Data/Reduced_L_1400/\"\n",
+    "lcenter = [322, 250]\n",
+    "rcenter = [322, 325]\n",
+    "maxradius = 10\n",
+    "cutoff = 5000\n",
+    "\n",
+    "extracted_data = extract_intensities(reduced_filename, reduced_folder, lcenter, rcenter, maxradius, cutoff)\n",
+    "Il_1400 = extracted_data[0]\n",
+    "Ir_1400 = extracted_data[1]\n",
+    "theta1400 = extracted_data[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.011002891852251768"
+       "0.5770738298065697"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RMS_calculator(MCal_1600)"
+    "Msample1550 = data_1550[0]\n",
+    "Mcal1550 = data_1550[2]\n",
+    "np.arccos(Msample1550[3, 3] + (1-Mcal1550[3, 3]))\n",
+    "#print(Mcal1550[3, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.10969057355489853"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1-Mcal1550[3,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.028294472844836924, 0.02369493944296544]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retardance_error(data_1550[0], data_1550[1], data_1550[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.002035179901845499"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs((upper_retardance-lower_retardance)/2)"
    ]
   },
   {
